welcome.lessons.welcome.variables.RunFour.scala.code
if(estSurBiscuit()<4==true)
avance()
